--- a/Quotes Project/index.html
+++ b/Quotes Project/index.html
@@ -11,6 +11,7 @@
       Press here to change color
     </button>
 
+    <button type="button" name="button"></button>
     <script src="script.js"></script>
   </body>
 </html>
