--- a/Hexcolor change/index.html
+++ b/Hexcolor change/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <button type="button" class="colorBtn">
-      Press here to change color
-    </button>
+    <div class="container">
+      <h2 class="hexColor">this is a hex color is: <span class="hex"></span></h2>
+       <button type="button" class="hexBtn">press here to change color</button>
 
-    <script src="script.js"></script>
+      <button class="generateHexCode()">testing</button>
+      <p class="demo"></p>
+    </div>
+
+    <script src="script.js">
+    </script>
   </body>
 </html>
