--- a/passTheMessage/index.html
+++ b/passTheMessage/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    
+    <button type="button" class="colorBtn">
+      Press here to change color
+    </button>
+
+    <script src="script.js"></script>
   </body>
 </html>
