--- a/html- exercise 1/home.html
+++ b/html- exercise 1/home.html
@@ -3,30 +3,54 @@
   <head>
     <meta charset="utf-8">
     <title>Exercise 1</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/master.css">
   </head>
   <body>
-<div class="row">
-  <div class="column1">
     <header>
-      <h1><a href="home.html">CURRICULUM <br>VITAE</a></h1>
+      <h1 class="top">My blog about my life</h1>
     </header>
 
-      <p>WELCOME to my CV!</p>
-  </div>
+    <section>
+      <div class="left-menu">
+        <h2>Menu</h2>
+        <ul>
+          <li><a href="today.html">Today</a></li>
+          <li><a href="yesterday.html">Yesterday</a></li>
+          <li><a href="lastweek.html">Last week</a></li>
+          <li><a href="archives.html">Archives</a></li>
+        </ul>
+      </div>
+    </section>
 
-  <div class="navbar">
-    <ul>
-      <li><a href="personal_data.html">Personal data</a></li>
-      <li><a href="education.html">Education</a></li>
-      <li><a href="pro_exp.html">Professional experience</a></li>
-    </ul>
+    <section class="main-body">
+        <h2>Meeting with supervisor</h2>
+        <p>14 Dec 2011</p>
+        <p>Today I went to the university by bus.</p>
+        <p>I had a met with my PhD supervisor</p>
 
+        <h2>New car!!!</h2>
+        <p>12 Dec 2011</p>
+        <p>Today I bought my new car. It's a Honda Accord and it's really nice.</p>
+        <p>I met some friends at a pub.</p>
 
-  </div>
+        <h2>Visited my parents</h2>
+        <p>10 Dec 2011</p>
+        <p>Today I went to the university by bus.</p>
+        <p>I had a met with my PhD supervisor</p>
 
-</div>
+      </section>
 
+    <section class="sidebar">
+        <h2>Last posts</h2>
+        <ul>
+          <li><a href="#">Meeting with supervisor</a></li>
+          <li><a href="#">New car!!!</a></li>
+          <li><a href="#">Visit my parents</a></li>
+        </ul>
+    </section>
 
+    <footer>
+      <p>Contact me: <a href="#">email@something.com</a></p>
+    </footer>
   </body>
 </html>
