--- a/html- exercise 2/home.html
+++ b/html- exercise 2/home.html
@@ -6,27 +6,38 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-<div class="row">
-  <div class="column1">
     <header>
-      <h1><a href="home.html">CURRICULUM <br>VITAE</a></h1>
+      <h1><img src="./img/KIT-uni.png" alt="university photo"> - Karlsruhe Institute of Technology</h1>
     </header>
 
-      <p>WELCOME to my CV!</p>
-  </div>
+    <nav>
+      <a href="#">Presentation</a>
+      <a href="#">Studies</a>
+      <a href="#">Staff</a>
+    </nav>
 
-  <div class="navbar">
-    <ul>
-      <li><a href="personal_data.html">Personal data</a></li>
-      <li><a href="education.html">Education</a></li>
-      <li><a href="pro_exp.html">Professional experience</a></li>
-    </ul>
+    <section class="news">
+      <h2>News</h2>
+      <p>New 1 - Date <br>
+      Description</p>
 
+      <p>News 2 - Date <br>
+      Description</p>
+    </section>
 
-  </div>
+    <section class="announcements">
+      <h2>Announcements</h2>
+      <p>Open course 1 <br>
+      Description</p>
 
-</div>
+      <p>Open course 2 <br>
+      Description</p>
+    </section>
 
+    <footer>
+      <p>Contact:<a href="#" >info@university.com</a><br>
+      (c) University, 2011</p>
+    </footer>
 
   </body>
 </html>
