--- a/html- exercise 3/home.html
+++ b/html- exercise 3/home.html
@@ -6,27 +6,58 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-<div class="row">
-  <div class="column1">
     <header>
-      <h1><a href="home.html">CURRICULUM <br>VITAE</a></h1>
+      <h1>CURRICULUM <br>VITAE</h1>
     </header>
 
-      <p>WELCOME to my CV!</p>
-  </div>
-
-  <div class="navbar">
-    <ul>
-      <li><a href="personal_data.html">Personal data</a></li>
-      <li><a href="education.html">Education</a></li>
-      <li><a href="pro_exp.html">Professional experience</a></li>
-    </ul>
 
 
-  </div>
+      <p><span class="head2">PERSONAL DATA</span><br>
+        <span id="data">Name</span>: Azamat<br>
+        <span id="data">Surname</span>: Azamat<br>
+        <span id="data">Date of birth</span>:30.07.74<br>
+        <span id="data">Place of birth</span>: Bishkek, Kyrgystan</p>
 
-</div>
 
+
+
+   <table>
+     <tr>
+       <td colspan="2" ><span class="head2">EDUCATION</span></td>
+     </tr>
+
+     <tr>
+       <td id="years">2005-2009</td>
+       <td>Computer Engineering in the Technical University of Kyrgystan in Bishkek</td>
+     </tr>
+
+     <tr>
+       <td id="years">2001-2005</td>
+       <td>High School "Manas" in Osh</td>
+     </tr>
+
+     <tr>
+       <td id="years">1995-2001</td>
+       <td>Primary school</td>
+     </tr>
+   </table>
+
+
+
+
+      <p><span class="head2">PROFESSIONAL EXPERIENCE</span></p>
+      <table>
+        <tr>
+          <td id="years">2007-2009</td>
+          <td>Computer teacher in High School in Bishkek</td>
+        </tr>
+
+        <tr>
+          <td id="years">2005-2007</td>
+          <td>Secretary of Department of Software in Technical University of Kyrgyzstan in Bishkek</td>
+        </tr>
+
+      </table>
 
   </body>
 </html>
