--- a/Quotes Project/index.html
+++ b/Quotes Project/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <button type="button" class="colorBtn">
-      Press here to change color
-    </button>
-
-    
+      <div class="container">
+        <h2>Quotes by famous people</h2>
+        <button type="button" id="quoteBtn">Press to Display a Quote</button>
+        <blockquote>
+          <h2 id="quote">quote</h2>
+        </blockquote>
+        <h3 id="quoteAuthor">author of the quote</h3>
+      </div>
     <script src="script.js"></script>
   </body>
 </html>
